Add account signup page and email verification.
Does not yet send emails, but there is an email sending service
and test to verify that it's being used correctly.